[package]
name = "ping-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
ping = "0.5.1"
rusqlite = { version = "0.30.0", features = ["bundled", "chrono"] }
serde = { versions="1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
